# gimp-ruby

./: .cvsignore  ChangeLog  INSTALL  MAINTAINERS  Makefile.am  README  acinclude.m4  autogen.sh  configure.in  enumconvert.rb  gimp-ruby.doap  notes.txt  todo.txt
doc/: guide.md  tutorial.md
ext/: .cvsignore  Makefile.am  arraytypes.c  conversion.c  definitions.c  ids.c  rbgimp.c  rbgimp.h  rbgimpcolorcmyk.c  rbgimpcolorhsv.c  rbgimpcolorrgb.c  rbgimpcolorspace.c  rbgimpconstants.c  rbgimpdialog.c  rbgimpmain.c  rbgimpproceduraldb.c  ruby-fu-console.c  structures.c
gimp-lib/: Makefile.am  gimp.rb  gimp_oo.rb  gimp_oo_brush.rb  gimp_oo_channel.rb  gimp_oo_context.rb  gimp_oo_display.rb  gimp_oo_drawable.rb  gimp_oo_edit.rb  gimp_oo_gradient.rb  gimp_oo_image.rb  gimp_oo_layer.rb  gimp_oo_palette.rb  gimp_oo_progress.rb  gimp_oo_selection.rb  gimp_oo_vectors.rb  pdb.rb  rubyfu.rb
plug-ins/: Makefile.am  coolmetal-logo.rb  gloom.rb  hello.rb  helloworld.rb  irbconsole.rb  rerunfile.rb  rubyfu_menu.rb  runfile.rb  speed.rb  sphere.rb  sunset.rb  test.rb
po/: .cvsignore  ChangeLog  POTFILES.in  ar.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  es.po  eu.po  fi.po  fr.po  gl.po  gu.po  mr.po  nb.po  nl.po  oc.po  or.po  pt.po  pt_BR.po  sl.po  sv.po  vi.po  zh_CN.po
