## Process this file with automake to produce Makefile.in

gimplibdir = $(GIMP_LIBDIR)/ruby

gimplib =  \
    gimp.rb              \
    gimp_oo.rb           \
    gimp_oo_brush.rb     \
    gimp_oo_channel.rb   \
    gimp_oo_context.rb   \
    gimp_oo_display.rb   \
    gimp_oo_drawable.rb  \
    gimp_oo_edit.rb      \
    gimp_oo_gradient.rb  \
    gimp_oo_image.rb     \
    gimp_oo_layer.rb     \
    gimp_oo_palette.rb   \
    gimp_oo_progress.rb  \
    gimp_oo_selection.rb \
    gimp_oo_vectors.rb   \
    pdb.rb               \
    rubyfu.rb            

gimplib_SCRIPTS = $(gimplib)

EXTRA_DIST = $(gimplib)
